--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -68,5 +68,5 @@ jobs:
             echo POSTGRES_USER=${{ secrets.POSTGRES_USER }} >> .env
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.HOST }} >> .env
-            echo DB_PORT=${{ secretes.PORT }} >> .env
+            echo DB_PORT=${{ secrets.PORT }} >> .env
             sudo docker-compsoe up -d
