--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-          pip intall -r requirements.txt
+          pip install -r requirements.txt
 
       - name: Test with Flake8 and Pytest
         run: |
