--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -70,3 +70,15 @@ jobs:
             echo DB_HOST=${{ secrets.HOST }} >> .env
             echo DB_PORT=${{ secrets.PORT }} >> .env
             sudo docker-compsoe up -d
+
+
+  send_message:
+    runs-on: ubuntu-latest
+    needs: deploy
+    steps:
+    - name: send message
+      uses: appleboy/telegram-action@master
+      with:
+        to: ${{ secrets.TELEGRAM_TO }}
+        token: ${{ secrets.TELEGRAM_TOKEN }}
+        message: ${{ github.workflow }} успешно выполнен! 
