--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -66,7 +66,6 @@ jobs:
           script: |
             sudo docker-compose stop
             sudo docker-compose rm web
-            cd infra
             touch .env
             echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> .env
             echo DB_NAME=${{  secrets.DB_NAME }} >> .env
@@ -74,7 +73,7 @@ jobs:
             echo POSTGRES_PASSWORD=${{ secrets.POSTGRES_PASSWORD }} >> .env
             echo DB_HOST=${{ secrets.HOST }} >> .env
             echo DB_PORT=${{ secrets.PORT }} >> .env
-            sudo docker-compsoe up -d
+            sudo docker-compose up -d
 
 
   send_message:
