--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
             - ./.env
 
     web:
+        build: .
         image: 4uku/yamdb:latest
         restart: always
         volumes:
