add build to web

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,6 +9,7 @@ services:
             - .env
 
     web:
+        build: ../api_yamdb/
         image: 4uku/yamdb:latest
         restart: always
         volumes:
