--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
             - .env
 
     web:
-        build: ../api_yamdb/
+        build: .
         image: 4uku/yamdb:latest
         restart: always
         volumes:
