--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,8 +9,7 @@ services:
             - .env
 
     web:
-        build: .
-        image: 4uku/yamdb:latest
+        image: 4uku/yamdb_final:latest
         restart: always
         volumes:
             - static_value:/app/static/
