--- a/api_yamdb/Dockerfile
+++ b/api_yamdb/Dockerfile
@@ -1,8 +1,6 @@
 FROM python:3.7-slim
-RUN mkdir /app
-COPY requirements.txt /app
-RUN pip3 install -r /app/requirements.txt --no-cache-dir
-COPY . /app
 WORKDIR /app
+COPY . .
+RUN pip3 install -r /app/requirements.txt --no-cache-dir
 CMD ["gunicorn", "api_yamdb.wsgi", "--bind", "0:8000"]
 LABEL author='Dmitry Nekrasov' version=1
