--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -19,7 +19,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install flake8 pep8-naming flake8-broken-line flake8-return flake8-isort
-          pip install -r requirements.txt
+          pip install -r /api_yamdb/requirements.txt
 
       - name: Test with Flake8 and Pytest
         run: |
@@ -47,9 +47,9 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          file: api_yamdb/Dockerfile
+          file: ./api_yamdb/Dockerfile
           push: true
-          tags: 4uku/yamdb:latest
+          tags: ${{ secrets.DOCKER_USERNAME }}/yamdb:latest
 
 
   deploy:
