--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,7 +9,7 @@ services:
             - ./.env
 
     web:
-        image: 4uku/yamdb:latest
+        image: 4uku/yamdb:v1.0
         restart: always
         volumes:
             - static_value:/app/static/
