--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -10,6 +10,9 @@ services:
 
     web:
         image: 4uku/yamdb:v1.0
+        build:
+            context: ./
+            dockerfile: ./Dockerfile
         restart: always
         volumes:
             - static_value:/app/static/
