change path to req v12

--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
         image: 4uku/yamdb:v1.0
         build:
             context: ./
-            dockerfile: ./Dockerfile
+            dockerfile: Dockerfile
         restart: always
         volumes:
             - static_value:/app/static/
