--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -1,39 +1,38 @@
-version: '3.3'
+version: '3.8'
+
 services:
+  db:
+    image: postgres:13.0-alpine
+    volumes:
+      - db_data:/var/lib/postgresql/data/
+    env_file:
+      - .env
 
-    db:
-        image: postgres:13.0-alpine
-        volumes:
-            - /var/lib/postgressql/data/
-        env_file:
-            - ./.env
+  web:
+    image: ${{ secrets.DOCKER_USERNAME }}/yamdb_final:latest
+    restart: always
+    volumes:
+      - static_value:/app/static/
+      - media_value:/app/media/
+    depends_on:
+      - db
+    env_file:
+      - .env
 
-    web:
-        image: 4uku/yamdb:v1.0
-        build:
-            context: .
-            dockerfile: Dockerfile
-        restart: always
-        volumes:
-            - static_value:/app/static/
-            - media_value:/app/media/
-        depends_on:
-            - db
-        env_file:
-            - ./.env
+  nginx:
+    image: nginx:1.21.3
+    ports:
+      - "80:80"
 
-    nginx:
-        image: nginx:1.21.3-alpine
-        ports:
-            - "80:80"
-        volumes:
-            - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
-            - static_value:/var/html/static/
-            - media_value:/var/html/media/
-        depends_on:
-            - web
+    volumes:
+      - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - static_value:/var/html/static/
+      - media_value:/var/html/media/
+
+    depends_on:
+      - web
 
 volumes:
-    static_value:
-    media_value:
-
+  static_value:
+  media_value:
+  db_data:
