--- a/.github/workflows/yamdb_workflow.yml
+++ b/.github/workflows/yamdb_workflow.yml
@@ -48,7 +48,7 @@ jobs:
         uses: docker/build-push-action@v2 
         with:
           context: ./api_yamdb
-          file: Dockerfile
+          file: ./api_yamdb/Dockerfile
           push: true
           tags: ${{  secrets.DOCKER_USERNAME  }}/yamdb_final:latest
           
