--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -10,6 +10,7 @@ services:
 
   web:
     image: 4uku/yamdb_final:latest
+    # build: ../api_yamdb/.
     restart: always
     volumes:
       - static_value:/app/static/
