--- a/infra/docker-compose.yaml
+++ b/infra/docker-compose.yaml
@@ -9,8 +9,7 @@ services:
       - .env
 
   web:
-    build: ../api_yamdb/.
-    restart: always
+    image: 4uku/yamdb_final:latest
     volumes:
       - static_value:/app/static/
       - media_value:/app/media/
